src/julia.h

typedef struct _jl_value_t {
    JL_DATA_TYPE
} jl_value_t;
typedef struct {
#ifdef OVERLAP_TUPLE_LEN
    size_t type : 52;
    size_t length : 12;
#else
    JL_DATA_TYPE
    size_t length;
#endif
    jl_value_t *data[];
} jl_tuple_t;
typedef struct _jl_function_t {
    JL_DATA_TYPE
    JL_FUNC_FIELDS
} jl_function_t;
DLLEXPORT int julia_trampoline(int argc, char *argv[], int (*pmain)(int ac,char *av[]));
// Threads

DLLEXPORT void jl_par_apply(jl_function_t * func, jl_value_t* args, size_t num_threads, size_t start, size_t step, size_t length );
typedef struct {
  uv_thread_t t;
  uv_mutex_t m;
  uv_cond_t c;
  int busy;
  int poolnum;
  jl_function_t* f;
  jl_tuple_t* targs;
} jl_thread_t;
DLLEXPORT jl_thread_t* jl_create_thread(jl_function_t* f, jl_tuple_t* targs);
DLLEXPORT void jl_run_thread(jl_thread_t* t);
DLLEXPORT void jl_join_thread(jl_thread_t* t);
DLLEXPORT void jl_destroy_thread(jl_thread_t* t);
DLLEXPORT uv_mutex_t* jl_create_mutex();
DLLEXPORT void jl_lock_mutex(uv_mutex_t* m);
DLLEXPORT void jl_unlock_mutex(uv_mutex_t* m);
DLLEXPORT void jl_destroy_mutex(uv_mutex_t* m);